// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All Demos Cheat-Code Demo should run the test 1`] = `
"Press a key five times in a second to get a star (✨🌟✨), or 'x' to eXit:

🕛 
🕐 
🕑 
🕒 
🕓 
🕕  🕕  🕕  🕕  🕕   ✨🌟✨!
🕖 "
`;

exports[`All Demos File-rendering Demo should work asynchronously 1`] = `
"> Got some data for file ./demos/scratch/actors.md: Jake Weary
> Processing action Actor.save
< Done processing - No more to do?
OK Bye!
"
`;

exports[`All Demos File-rendering Demo should work synchronously 1`] = `
"> Got some data for file ./demos/scratch/actors.md: Jake Weary
> Processing action Actor.save

File now contains: - Jake Weary

< Done processing - No more to do?
OK Bye!
"
`;

exports[`All Demos Fruit Concurrency Demo should abort in-flight renders in cutoff mode 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🍍  🍍  🍍  🍍  ✅
  5️⃣  🍏  🍏  🍏  🍏  🍏  ✅
"
`;

exports[`All Demos Fruit Concurrency Demo should mute/drop new renders in mute mode 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🥑  🥑  🥑  🥑  ✅
  5️⃣  🍏  🍏  🍏  🍏  🍏  ✅
"
`;

exports[`All Demos Fruit Concurrency Demo should run in parallel 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🥑  🍍  🥑  🍍  🥑  🍍  🥑  ✅
 🍍  ✅
  5️⃣  🍏  🍏  🍏  🍏  🍏  ✅
"
`;

exports[`All Demos Fruit Concurrency Demo should run in series 1`] = `
"Press a number to download a fruit (higher numbers take longer). 
  1️⃣ :🍓  2️⃣ :🍌  3️⃣ :🍉  4️⃣ :🍍  5️⃣ :🍏  6️⃣ :🍓  7️⃣ :🥝  8️⃣ :🍒  9️⃣ :🥑  
      
  1️⃣  🍓  ✅
  2️⃣  🍌  🍌  ✅
  3️⃣  🍉  🍉  🍉  ✅
  9️⃣  🥑  🥑  🥑  🥑  🥑   4️⃣  🥑  🥑  🥑  🥑  ✅
 🍍   5️⃣  🍍  🍍  🍍  ✅
 🍏  🍏  🍏  🍏  🍏  ✅
"
`;

exports[`All Demos Session Timeout Demo should run the test 1`] = `
"Your session will timeout in 5 seconds. Keep pressing keys to keep it alive
•
•
Got a keypress
•
•
Got a keypress
•
•
•
•
•
You are being logged out..
•
Got a keypress
Got a keypress
•
•
•
•
•
You are being logged out..
•
•
You have been logged out.
"
`;
